2009-03-25  Alejandro Pinheiro Iglesias <apinheiro@igalia.com>

	* configure.ac: added libcangerra-gtk dependency
	* debian/control: added libcanberra-gtk dependency
	* src/Makefile.am: added libcanberra gtk related flags
	* src/hildon-sound.c: use ca_gtk_context_get to get a canberra context
	instead of use it.

	Fixes: NB#106067 (hildon_play_system_sound() play sound only first time called)

2009-03-25  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program.c (hildon_program_remove_window)
	(hildon_program_add_window): Add checks for the window
	parameter. Don't decrease the window counter if the window is not
	registered.

2009-03-24  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_realize): Fixed position of the event_window
	in the realize method.

2009-03-24  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c (hildon_app_menu_find_intruder)
	(hildon_app_menu_map, hildon_app_menu_hide_idle)
	(hildon_app_menu_key_press, hildon_app_menu_init)
	(hildon_app_menu_finalize):
	Make sure that all idle functions are removed when the widget is
	destroyed.

	Fixes: NB#107583 (Hildon app menu crashes in various applications)

2009-03-24  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.56]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-03-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-entry.c
	(+hildon_entry_show_placeholder),
	(+hildon_entry_hide_placeholder), Methods to show/hide the placeholder text
	that replace hildon_entry_update_contents().
	(hildon_entry_set_text),
	(hildon_entry_set_placeholder),
	(hildon_entry_focus_in_event),
	(hildon_entry_focus_out_event): Determine when it is needed
	either to show or hide the placeholder and call the above methods.

	Fixes: NB#107471 (hildon_entry_set_text() not setting the text
	when the placeholder text is already set)
